# GameEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CreateProjects.sh  GameEngine.code-workspace  README.md  Reset2Master.sh  cap.rdc  cap2.rdc  files.txt  render_doc.cap
.github/workflows/: cmake-linux.yml  cmake-windows.yml  cmake.yml
TemplateApp/: CMakeLists.txt  imgui.ini  main.cpp  main.hpp
cmake_modules/: Findfreeglut.cmake  Findsdl2.cmake
gameengine/: CMakeLists.txt
gameengine/include/gameengine/: AttributeMeta.hpp  BasicTypes.hpp  Camera.hpp  Cube.hpp  EditableTexture.h  EngineParams.hpp  ExecuteType.hpp  IComponent.hpp  IDebugOverlay.hpp  IEngineUser.hpp  IGameEngine.hpp  IGameEngineApp.hpp  ILightSource.hpp  IMPORT_Windows.hpp  IObject.hpp  IObjectFactory.hpp  IProgramFactory.hpp  IRenderDevice.hpp  IRenderDevice.hpp.orig  IRenderable.hpp  ISDL2Wrapper.hpp  IShaderFactory.hpp  ITexture.hpp  ITextureFactory.hpp  ITransformable.hpp  IUtility.hpp  IUtilityUser.hpp  Import.hpp  IndexBuffer.hpp  Model.hpp  Program.hpp  Program.hpp.orig  ProjectionData.hpp  Shader.hpp  ShaderTypes.hpp  Sprite.hpp  String.hpp  VertexArray.hpp  VertexBuffer.hpp  Viewport.hpp
gameengine/include/gameengine/Components/: IComponent.hpp  Name.hpp  TransformComponent.hpp
gameengine/include/gameengine/DX12/: DescriptorHeap.hpp
gameengine/include/gameengine/Events/: IEventLoop.hpp  ISDLEventObserver.hpp  IWindowEventListener.hpp  IWindowEventObservable.hpp
gameengine/include/gameengine/Input/: IKeyboardObservable.hpp  IKeyboardObserver.hpp  IMouseObservable.hpp  IMouseObserver.hpp  KeyboardDefines.hpp  MouseData.hpp
gameengine/include/gameengine/Primitives/: Anchor.hpp  ILine.hpp  IPoint.hpp  IQuad.hpp  ITriangle.hpp  Line.hpp  Quad.hpp  Sphere.hpp  Triangle.hpp
gameengine/include/gameengine/Render/: FrameTimeManager.hpp  IRender.hpp  ITextureFrameBuffer.hpp  PixelFormats.hpp  PointLight.hpp  RendererTypes.hpp
gameengine/include/gameengine/Scene/: Scene.hpp  SceneStore.hpp
gameengine/include/gameengine/Shaders/: ShaderProgram.hpp  ShaderState.hpp  ShaderTypes.hpp  ShaderUnit.hpp
gameengine/include/gameengine/UI/: ImGuiHelper.hpp  UIService.hpp  Widget.hpp  WidgetEditable.hpp
gameengine/include/gameengine/Windowing/: IWindow.hpp  WinData.hpp  WinSize.hpp  WindowEventType.hpp
gameengine/src/: BasicTypes.cpp  Camera.cpp  Cube.cpp  DeviceDX12.cpp  DeviceDX12.hpp  DeviceDX9.cpp  DeviceDX9.hpp  DeviceOpenGL.cpp  DeviceOpenGL.cpp.orig  DeviceOpenGL.hpp  DeviceOpenGL.hpp.orig  DeviceOpenGL_Legacy.cpp  DeviceOpenGL_Legacy.hpp  EditableTexture.cpp  GameEngineConcrete.cpp  GameEngineConcrete.hpp  IEngineUser.cpp  IGameEngine.cpp  IGameEngineApp.cpp  ILightSource.cpp  IMPORT_Windows.cpp  IMPORT_glew.hpp  IMPORT_rapidobj.hpp  IObject.cpp  IObjectFactory.cpp  IRenderDevice.cpp  IRenderable.cpp  IShaderFactory.cpp  ITexture.cpp  ITransformable.cpp  IUtility.cpp  IUtilityUser.cpp  ImportFreeglut.hpp  IndexBuffer.cpp  MatrixStack.cpp  MatrixStack.hpp  Model.cpp  ObjLoader.hpp  OpenGLShaderFactory.cpp  OpenGLShaderFactory.hpp  (+21 more)
gameengine/src/Components/: IComponent.cpp  Name.cpp  TransformComponent.cpp
gameengine/src/DX09/: DeviceDX09.cpp  DeviceDX09.hpp
gameengine/src/DX12/: CommandListParams.cpp  CommandListParams.hpp  CommandListWrapper.cpp  CommandListWrapper.hpp  CommandWrapper.cpp  CommandWrapper.hpp  DescriptorHeap.cpp  DeviceDX12.cpp  DeviceDX12.cpp.orig  DeviceDX12.hpp  DeviceDX12.hpp.orig  FramePerapreParams.hpp  ImportWindows.cpp  ImportWindows.hpp  PrimitiveInfo.hpp  ResourceWrapper.hpp
gameengine/src/DebugUtil/: DebugSystemBase.cpp  DebugSystemBase.hpp  DebugSystemDX12.cpp  DebugSystemDX12.hpp  DebugSystemOpenGL3.cpp  DebugSystemOpenGL3.hpp  DebugSystemOpenGLModern.cpp  DebugSystemOpenGLModern.hpp  DebugSystemParams.hpp
gameengine/src/OpenGL_Legacy/: DeviceOpenGL_Legacy.cpp  DeviceOpenGL_Legacy.cpp.orig  DeviceOpenGL_Legacy.hpp  DeviceOpenGL_Legacy.hpp.orig
gameengine/src/Primitives/: Anchor.cpp  IQuad.cpp  ITriangle.cpp  Line.cpp  LineImpl.cpp  LineImpl.hpp  PointImpl.hpp  Quad.cpp  QuadImpl.cpp  QuadImpl.hpp  QuadImplLegacy.cpp  QuadImplLegacy.hpp  Sphere.cpp  Triangle.cpp  TriangleImpl.cpp  TriangleImpl.hpp
gameengine/src/Render/: FrameTimeManager.cpp  ITextureFrameBuffer.cpp  PixelFormats.cpp  PointLight.cpp  TextureFrameBufferOpenGL.cpp  TextureFrameBufferOpenGL.hpp
gameengine/src/Scene/: Scene.cpp  SceneConcrete.cpp  SceneConcrete.hpp  SceneStore.cpp  SceneStoreConcrete.cpp  SceneStoreConcrete.hpp
gameengine/src/Shaders/: ShaderProgram.cpp  ShaderTypes.cpp  ShaderUnit.cpp
gameengine/src/UI/: ImGuiHelper.cpp  UIService.cpp  UIServiceConcrete.cpp  UIServiceConcrete.hpp  Widget.cpp  WidgetTexture.cpp  WidgetTexture.hpp
gameengine/src/Windowing/: WinData.cpp
gameengine/src/embedded_shaders/: basic_color.frag  basic_pos.vert  basic_pos_test.vert  camera.frag  camera_orto.frag  camera_orto.vert  cube.frag  cube.vert  fbo.frag  fbo.vert  rt_basic.frag  rt_basic.vert
gameengine/src/sdl2wrapper/: IMPORT_DX9.hpp  IMPORT_SDL.hpp  IMPORT_SDL_opengl.hpp  IMPORT_SDL_video.hpp  IMPORT_Windows.hpp  IRender.cpp  ISDL2Wrapper.cpp  ISprite.cpp  ISprite.hpp  IWindow.cpp  IWindowFactory.cpp  IWindowFactory.hpp  RegularSDL2Window.cpp  RegularSDL2Window.hpp  RendererTypes.cpp  SDL2Wrapper.cpp  SDL2WrapperImpl.cpp  SDL2WrapperImpl.hpp  Sprite.cpp  Sprite.hpp  TextureSDL.cpp  TextureSDL.hpp  WindowFactoryConcrete.cpp  WindowFactoryConcrete.hpp
gameengine/src/sdl2wrapper/Input/: MouseData.cpp
sample/RayTracingPlayground/: CMakeLists.txt  main.cpp  rt.cpp  rt.hpp
sample/RayTracingPlaygroundShader/: CMakeLists.txt  Config.txt  main.cpp  rts.cpp  rts.hpp
sample/UI2D/: UI2d.cpp  UI2d.hpp  imgui.ini  main.cpp
sample/dx12playground/: CMakeLists.txt  Config.txt  Playground.cpp  Playground.hpp  main.cpp  rdoc.cap
sample/playgroundApp/: 00-bad.rdc  00-good.rdc  CMakeLists.txt  Config.txt  Playground.cpp  Playground.hpp  cap.cap  main.cpp
sample/snake/: CMakeLists.txt  Config.txt  imgui.ini  main.cpp
sample/test00/: CMakeLists.txt  (+2 more)
sdl2wrapper/: CMakeLists.txt
(+11 files in other folders)
